--- a/examples/webgl_lights_spotlight.html
+++ b/examples/webgl_lights_spotlight.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - spotlight by <a href="http://master-domain.com" target="_blank" rel="noopener">Master James</a><br />
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> webgl - spotlight<br />
 		</div>
 
 		<!-- Import maps polyfill -->
@@ -31,42 +31,47 @@
 
 			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
 
+			import { PLYLoader } from 'three/addons/loaders/PLYLoader.js';
 			import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-			let renderer, scene, camera, material;
+			let renderer, scene, camera;
 
-			let spotLight, lightHelper, shadowCameraHelper;
+			let spotLight, lightHelper;
 
-			let textures = { none: null };
-
-			let gui;
+			init();
 
 			function init() {
 
 				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setAnimationLoop( render );
 				renderer.shadowMap.enabled = true;
 				renderer.shadowMap.type = THREE.PCFSoftShadowMap;
 				renderer.outputEncoding = THREE.sRGBEncoding;
+				renderer.toneMapping = THREE.ACESFilmicToneMapping;
 				document.body.appendChild( renderer.domElement );
 
 
 				scene = new THREE.Scene();
 
 				camera = new THREE.PerspectiveCamera( 35, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.set( 160, 40, 10 );
+				camera.position.set( 76, 50, 10 );
+				camera.rotation.set( - 1.29, 1.15, 1.26 );
 
 				const controls = new OrbitControls( camera, renderer.domElement );
-				controls.addEventListener( 'change', render );
 				controls.minDistance = 20;
 				controls.maxDistance = 500;
+				controls.target.set( 0, 18, 0 );
+				controls.update();
 
-				const ambient = new THREE.AmbientLight( 0xffffff, 0.1 );
+				const ambient = new THREE.HemisphereLight( 0xffffff, 0x444444, 0.05 );
 				scene.add( ambient );
 
 				const loader = new THREE.TextureLoader().setPath( 'textures/' );
-				const filenames = [ 'uv_grid_opengl.jpg', 'sprite2.png', 'colors.png' ];
+				const filenames = [ 'disturb.jpg', 'uv_grid_opengl.jpg', 'colors.png' ];
+
+				const textures = { none: null };
 
 				for ( let i = 0; i < filenames.length; i ++ ) {
 
@@ -80,16 +85,16 @@
 
 				}
 
-				spotLight = new THREE.SpotLight( 0xffffff, 1 );
-				spotLight.position.set( 15, 40, 35 );
-				spotLight.angle = Math.PI / 4;
-				spotLight.penumbra = 0.1;
+				spotLight = new THREE.SpotLight( 0xffffff, 1.75 );
+				spotLight.position.set( 25, 50, 25 );
+				spotLight.angle = Math.PI / 6;
+				spotLight.penumbra = 1;
 				spotLight.decay = 2;
-				spotLight.distance = 200;
+				spotLight.distance = 100;
 
 				spotLight.castShadow = true;
-				spotLight.shadow.mapSize.width = 512;
-				spotLight.shadow.mapSize.height = 512;
+				spotLight.shadow.mapSize.width = 1024;
+				spotLight.shadow.mapSize.height = 1024;
 				spotLight.shadow.camera.near = 10;
 				spotLight.shadow.camera.far = 200;
 				spotLight.shadow.focus = 1;
@@ -98,17 +103,14 @@
 				lightHelper = new THREE.SpotLightHelper( spotLight );
 				scene.add( lightHelper );
 
-				shadowCameraHelper = new THREE.CameraHelper( spotLight.shadow.camera );
-				shadowCameraHelper.visible = false;
-				scene.add( shadowCameraHelper );
-
 				//
 
-				material = new THREE.MeshPhongMaterial( { color: 0x808080, dithering: true } );
+				
 
-				let geometry = new THREE.PlaneGeometry( 2000, 2000 );
+				const geometry = new THREE.PlaneGeometry( 1000, 1000 );
+				const material = new THREE.MeshLambertMaterial( { color: 0x808080 } );
 
-				let mesh = new THREE.Mesh( geometry, material );
+				const mesh = new THREE.Mesh( geometry, material );
 				mesh.position.set( 0, - 1, 0 );
 				mesh.rotation.x = - Math.PI * 0.5;
 				mesh.receiveShadow = true;
@@ -116,18 +118,107 @@
 
 				//
 
-				let material2 = new THREE.MeshPhongMaterial( { color: 0x4080ff, dithering: true } );
+				new PLYLoader().load( 'models/ply/binary/Lucy100k.ply', function ( geometry ) {
 
-				geometry = new THREE.CylinderGeometry( 5, 5, 2, 32, 1, false );
+					geometry.scale( 0.024, 0.024, 0.024 );
+					geometry.computeVertexNormals();
 
-				mesh = new THREE.Mesh( geometry, material2 );
-				mesh.position.set( 0, 5, 0 );
-				mesh.castShadow = true;
-				scene.add( mesh );
+					const material = new THREE.MeshLambertMaterial();
 
-				render();
+					const mesh = new THREE.Mesh( geometry, material );
+					mesh.rotation.y = - Math.PI / 2;
+					mesh.position.y = 18;
+					mesh.castShadow = true;
+					mesh.receiveShadow = true;
+					scene.add( mesh );
+
+				} );
 
 				window.addEventListener( 'resize', onWindowResize );
+
+				// GUI
+
+				const gui = new GUI();
+
+				const params = {
+					map: 'none',
+					color: spotLight.color.getHex(),
+					intensity: spotLight.intensity,
+					distance: spotLight.distance,
+					angle: spotLight.angle,
+					penumbra: spotLight.penumbra,
+					decay: spotLight.decay,
+					focus: spotLight.shadow.focus,
+					shadows: true
+				};
+
+				gui.add( params, 'map', textures ).onChange( function ( val ) {
+
+					spotLight.map = val;
+
+				} );
+
+				gui.addColor( params, 'color' ).onChange( function ( val ) {
+
+					spotLight.color.setHex( val );
+
+				} );
+
+				gui.add( params, 'intensity', 0, 3 ).onChange( function ( val ) {
+
+					spotLight.intensity = val;
+
+				} );
+
+
+				gui.add( params, 'distance', 50, 200 ).onChange( function ( val ) {
+
+					spotLight.distance = val;
+
+				} );
+
+				gui.add( params, 'angle', 0, Math.PI / 3 ).onChange( function ( val ) {
+
+					spotLight.angle = val;
+
+				} );
+
+				gui.add( params, 'penumbra', 0, 1 ).onChange( function ( val ) {
+
+					spotLight.penumbra = val;
+
+				} );
+
+				gui.add( params, 'decay', 1, 2 ).onChange( function ( val ) {
+
+					spotLight.decay = val;
+
+				} );
+
+				gui.add( params, 'focus', 0, 1 ).onChange( function ( val ) {
+
+					spotLight.shadow.focus = val;
+
+				} );
+
+
+				gui.add( params, 'shadows' ).onChange( function ( val ) {
+
+					renderer.shadowMap.enabled = val;
+
+					scene.traverse( function ( child ) {
+
+						if ( child.material ) {
+
+							child.material.needsUpdate = true;
+
+						}
+
+					} );
+
+				} );
+
+				gui.open();
 
 			}
 
@@ -138,119 +229,20 @@
 
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
-				render();
-
 			}
 
 			function render() {
 
-				lightHelper.update();
+				const time = performance.now() / 3000;
 
-				shadowCameraHelper.update();
+				spotLight.position.x = Math.cos( time ) * 25;
+				spotLight.position.z = Math.sin( time ) * 25;
+
+				lightHelper.update();
 
 				renderer.render( scene, camera );
 
 			}
-
-			function buildGui() {
-
-				gui = new GUI();
-
-				const params = {
-					'light color': spotLight.color.getHex(),
-					intensity: spotLight.intensity,
-					distance: spotLight.distance,
-					angle: spotLight.angle,
-					penumbra: spotLight.penumbra,
-					decay: spotLight.decay,
-					focus: spotLight.shadow.focus,
-					map: 'none',
-					'shadow camera': false,
-					'enable shadows': true
-				};
-
-				gui.addColor( params, 'light color' ).onChange( function ( val ) {
-
-					spotLight.color.setHex( val );
-					render();
-
-				} );
-
-				gui.add( params, 'intensity', 0, 2 ).onChange( function ( val ) {
-
-					spotLight.intensity = val;
-					render();
-
-				} );
-
-
-				gui.add( params, 'distance', 50, 200 ).onChange( function ( val ) {
-
-					spotLight.distance = val;
-					render();
-
-				} );
-
-				gui.add( params, 'angle', 0, Math.PI / 3 ).onChange( function ( val ) {
-
-					spotLight.angle = val;
-					render();
-
-				} );
-
-				gui.add( params, 'penumbra', 0, 1 ).onChange( function ( val ) {
-
-					spotLight.penumbra = val;
-					render();
-
-				} );
-
-				gui.add( params, 'decay', 1, 2 ).onChange( function ( val ) {
-
-					spotLight.decay = val;
-					render();
-
-				} );
-
-				gui.add( params, 'focus', 0, 1 ).onChange( function ( val ) {
-
-					spotLight.shadow.focus = val;
-					render();
-
-				} );
-
-				gui.add( params, 'map', textures ).onChange( function ( val ) {
-
-					spotLight.map = val;
-					render();
-
-				} );
-
-				gui.add( params, 'shadow camera' ).onChange( function ( val ) {
-
-					shadowCameraHelper.visible = val;
-					render();
-
-				} );
-
-
-				gui.add( params, 'enable shadows' ).onChange( function ( val ) {
-
-					renderer.shadowMap.enabled = val
-					material.needsUpdate = true;
-					render();
-
-				} );
-
-				gui.open();
-
-			}
-
-			init();
-
-			buildGui();
-
-			render();
 
 		</script>
 
