--- a/examples/webgpu_audio_processing.html
+++ b/examples/webgpu_audio_processing.html
@@ -7,6 +7,10 @@
 	</head>
 	<body>
 
+		<div id="overlay">
+			<button id="startButton">Play</button>
+		</div>
+
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Audio Processing
 			<br>Click on the screen to process the audio using WebGPU.
@@ -31,7 +35,7 @@
 			import {
 				ShaderNode, compute,
 				uniform, element, storage, instanceIndex,
-				float, assign, add, sub, div, mul
+				float, assign, add, sub, div, mul, texture, viewportTopLeft, color
 			} from 'three/nodes';
 
 			import { GUI } from 'three/addons/libs/lil-gui.module.min.js';
@@ -39,20 +43,27 @@
 			import WebGPU from 'three/addons/capabilities/WebGPU.js';
 			import WebGPURenderer from 'three/addons/renderers/webgpu/WebGPURenderer.js';
 
-			let renderer;
+			let camera, scene, renderer;
 			let computeNode;
 			let waveBuffer, sampleRate;
 			let waveGPUBuffer;
+			let currentAudio, currentAnalyser;
+			let analyserBuffer = new Uint8Array( 1024 );
+			let analyserTexture;
 
 			await init();
 
 			async function playAudioBuffer() {
 
+				if ( currentAudio ) currentAudio.stop();
+
+				// compute audio
+
 				renderer.compute( computeNode );
 
 				const waveArray = await renderer.getArrayFromBuffer( waveGPUBuffer );
 
-				//
+				// play result
 
 				const audioOutputContext = new AudioContext( { sampleRate } );
 				const audioOutputBuffer = audioOutputContext.createBuffer( 1, waveArray.length, sampleRate );
@@ -63,6 +74,15 @@
 				source.connect( audioOutputContext.destination );
 				source.buffer = audioOutputBuffer;
 				source.start();
+
+				currentAudio = source;
+
+				// visual feedback
+
+				currentAnalyser = audioOutputContext.createAnalyser();
+				currentAnalyser.fftSize = 2048;
+
+				source.connect( currentAnalyser );
 
 			}
 
@@ -78,16 +98,19 @@
 
 				document.onclick = () => {
 
+					const overlay = document.getElementById( 'overlay' );
+					if ( overlay !== null ) overlay.remove();
+
 					playAudioBuffer();
 
 				};
 
 				// audio buffer
 
-				const buffer = await fetch( 'sounds/webgpu-audio-processing.mp3' ).then( res => res.arrayBuffer() );
+				const soundBuffer = await fetch( 'sounds/webgpu-audio-processing.mp3' ).then( res => res.arrayBuffer() );
 				const audioContext = new AudioContext();
 
-				const audioBuffer = await audioContext.decodeAudioData( buffer );
+				const audioBuffer = await audioContext.decodeAudioData( soundBuffer );
 
 				waveBuffer = audioBuffer.getChannelData( 0 );
 
@@ -120,9 +143,12 @@
 
 				const computeShaderNode = new ShaderNode( ( inputs, builder ) => {
 
+					const index = float( instanceIndex );
+
+
 					// pitch
 
-					const time = mul( float( instanceIndex ), pitch );
+					const time = mul( index, pitch );
 
 					let wave = element( waveNode, time );
 
@@ -131,14 +157,15 @@
 
 					for ( let i = 1; i < 7; i ++ ) {
 
-						const waveOffset = element( waveNode, mul( sub( float( instanceIndex ), mul( mul( delayOffset, sampleRate ), i ) ), pitch ) );
+						const waveOffset = element( waveNode, mul( sub( index, mul( mul( delayOffset, sampleRate ), i ) ), pitch ) );
 						const waveOffsetVolume = mul( waveOffset, div( delayVolume, i * i ) );
 
 						wave = add( wave, waveOffsetVolume );
 
 					}
 
-					//
+
+					// store
 
 					const waveStorageElementNode = element( waveStorageNode, instanceIndex );
 
@@ -157,15 +184,63 @@
 				const gui = new GUI();
 
 				gui.add( pitch, 'value', .5, 2, 0.01 ).name( 'pitch' );
-				gui.add( delayVolume, 'value', 0, 1, .01 ).name( 'delayVolume' );;
-				gui.add( delayOffset, 'value', .1, 1, .01 ).name( 'delayOffset' );;
+				gui.add( delayVolume, 'value', 0, 1, .01 ).name( 'delayVolume' );
+				gui.add( delayOffset, 'value', .1, 1, .01 ).name( 'delayOffset' );
 
 
 				// renderer
 
-				renderer = new WebGPURenderer();
+				const container = document.createElement( 'div' );
+				document.body.appendChild( container );
 
-				await renderer.init();
+				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.01, 30 );
+
+
+				// nodes
+
+				analyserTexture = new THREE.DataTexture( analyserBuffer, analyserBuffer.length, 1, THREE.RedFormat );
+
+				const spectrum = mul( texture( analyserTexture, viewportTopLeft.x ), viewportTopLeft.y ).x;
+				const backgroundNode = mul( color( 0x0000FF ), spectrum );
+
+
+				// scene
+
+				scene = new THREE.Scene();
+				scene.backgroundNode = backgroundNode;
+
+				// renderer
+
+				renderer = new WebGPURenderer();
+				renderer.setPixelRatio( window.devicePixelRatio );
+				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.setAnimationLoop( render );
+				container.appendChild( renderer.domElement );
+
+				window.addEventListener( 'resize', onWindowResize );
+
+			}
+
+			function onWindowResize() {
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+			}
+
+			function render() {
+
+				if ( currentAnalyser ) {
+
+					currentAnalyser.getByteFrequencyData( analyserBuffer );
+
+					analyserTexture.needsUpdate = true;
+
+				}
+
+				renderer.render( scene, camera );
 
 			}
 
